# GGUF-ZeroCopy-v4

./: BUILD_FIX_GUIDE.md  README.md  gradle.properties  settings.gradle.kts  termux-deploy.sh
.github/workflows/: build.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  ipc-bridge.cpp
app/src/main/java/com/gguf/ipc/: EngineCore.kt  MainActivity.kt
app/src/main/res/values/: strings.xml  themes.xml
